--- a/about.html
+++ b/about.html
@@ -765,7 +765,7 @@ input[type=checkbox]:checked ~ #menu{
 			<a href="#">Writing </a>
 	  
 		  </li>
-		  <li><a href="#">Resources</a></li>
+		  <li><a href="resources.html">Resources</a></li>
 		  <li>
 			 <a href="https://rosy.substack.com" target="_blank">
 		 
