--- a/index.html
+++ b/index.html
@@ -966,9 +966,8 @@
 				and 4.4 star rating. </p>
 			<p id="21e26093-2b73-4ade-9c32-1440f6784f75" class="">Check out free Udemy course &quot;Design to Code:
 				Turning Email Designs into HTML and CSS&quot;!</p>
-			<figure id="45a2631c-8aac-44c2-85ed-cc8e16411b63">
-				<div class="source"><a href="https://youtu.be/Uwe9OpYEQu4">https://youtu.be/Uwe9OpYEQu4</a></div>
-			</figure>
+			
+			<figure><iframe width="100%" height="400" src="https://www.youtube.com/embed/Uwe9OpYEQu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></figure>
 			<figure id="ad95f7bc-01c8-4c7b-bc6d-20a4c20dcade"><a
 					href="https://www.udemy.com/course/design-to-code-turning-email-designs-into-html-and-css/"
 					class="bookmark source">
